Missed save from last push

--- a/MSDS_453_Term_Project/V3_top_courses_NLP_code.ipynb
+++ b/MSDS_453_Term_Project/V3_top_courses_NLP_code.ipynb
@@ -2695,13 +2695,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>191</th>\n",
+       "      <th>192</th>\n",
+       "      <th>193</th>\n",
+       "      <th>194</th>\n",
+       "      <th>195</th>\n",
+       "      <th>196</th>\n",
+       "      <th>197</th>\n",
+       "      <th>198</th>\n",
+       "      <th>199</th>\n",
+       "      <th>file_name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>review_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.554126</td>\n",
+       "      <td>0.342827</td>\n",
+       "      <td>0.516570</td>\n",
+       "      <td>-0.760951</td>\n",
+       "      <td>-1.733666</td>\n",
+       "      <td>0.214884</td>\n",
+       "      <td>-0.276581</td>\n",
+       "      <td>1.018589</td>\n",
+       "      <td>-0.325350</td>\n",
+       "      <td>0.891336</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.101687</td>\n",
+       "      <td>-1.490672</td>\n",
+       "      <td>-1.554155</td>\n",
+       "      <td>0.511061</td>\n",
+       "      <td>0.771660</td>\n",
+       "      <td>-0.470302</td>\n",
+       "      <td>-1.465605</td>\n",
+       "      <td>-0.134886</td>\n",
+       "      <td>0.668597</td>\n",
+       "      <td>rev2_pine_valley_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.081035</td>\n",
+       "      <td>1.160871</td>\n",
+       "      <td>0.032024</td>\n",
+       "      <td>-0.069072</td>\n",
+       "      <td>-0.971154</td>\n",
+       "      <td>0.225187</td>\n",
+       "      <td>0.312534</td>\n",
+       "      <td>0.950807</td>\n",
+       "      <td>0.180838</td>\n",
+       "      <td>-0.090150</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.203311</td>\n",
+       "      <td>-0.253282</td>\n",
+       "      <td>-1.040361</td>\n",
+       "      <td>-0.120287</td>\n",
+       "      <td>0.982062</td>\n",
+       "      <td>-0.333706</td>\n",
+       "      <td>-0.805500</td>\n",
+       "      <td>-0.244531</td>\n",
+       "      <td>0.274832</td>\n",
+       "      <td>rev3_cypress_point_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.543736</td>\n",
+       "      <td>0.356775</td>\n",
+       "      <td>0.586292</td>\n",
+       "      <td>0.918778</td>\n",
+       "      <td>-0.559863</td>\n",
+       "      <td>-0.397467</td>\n",
+       "      <td>0.015662</td>\n",
+       "      <td>0.404960</td>\n",
+       "      <td>0.322822</td>\n",
+       "      <td>-0.329311</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.444391</td>\n",
+       "      <td>0.381544</td>\n",
+       "      <td>-0.531157</td>\n",
+       "      <td>-0.085994</td>\n",
+       "      <td>-0.043369</td>\n",
+       "      <td>0.106303</td>\n",
+       "      <td>-0.335385</td>\n",
+       "      <td>0.284948</td>\n",
+       "      <td>0.109966</td>\n",
+       "      <td>rev4_cypress_point_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.444937</td>\n",
+       "      <td>0.566368</td>\n",
+       "      <td>0.366118</td>\n",
+       "      <td>0.783101</td>\n",
+       "      <td>-0.347505</td>\n",
+       "      <td>-0.264906</td>\n",
+       "      <td>0.271222</td>\n",
+       "      <td>0.474403</td>\n",
+       "      <td>0.497580</td>\n",
+       "      <td>-0.513939</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.268253</td>\n",
+       "      <td>0.402992</td>\n",
+       "      <td>-0.298528</td>\n",
+       "      <td>-0.173291</td>\n",
+       "      <td>0.294568</td>\n",
+       "      <td>0.165726</td>\n",
+       "      <td>-0.057094</td>\n",
+       "      <td>-0.112719</td>\n",
+       "      <td>0.223362</td>\n",
+       "      <td>rev5_shinnecock_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1.246185</td>\n",
+       "      <td>-0.304587</td>\n",
+       "      <td>0.686094</td>\n",
+       "      <td>0.494555</td>\n",
+       "      <td>0.119255</td>\n",
+       "      <td>0.479056</td>\n",
+       "      <td>-0.830943</td>\n",
+       "      <td>-0.361757</td>\n",
+       "      <td>-0.601349</td>\n",
+       "      <td>-0.323787</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.504311</td>\n",
+       "      <td>-0.081463</td>\n",
+       "      <td>-0.445861</td>\n",
+       "      <td>0.061068</td>\n",
+       "      <td>-0.438755</td>\n",
+       "      <td>0.178500</td>\n",
+       "      <td>-0.849374</td>\n",
+       "      <td>1.170650</td>\n",
+       "      <td>-0.660383</td>\n",
+       "      <td>rev6_shinnecock_2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 201 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  0         1         2         3         4         5  \\\n",
+       "review_id                                                               \n",
+       "1          0.554126  0.342827  0.516570 -0.760951 -1.733666  0.214884   \n",
+       "2          0.081035  1.160871  0.032024 -0.069072 -0.971154  0.225187   \n",
+       "3          0.543736  0.356775  0.586292  0.918778 -0.559863 -0.397467   \n",
+       "4          0.444937  0.566368  0.366118  0.783101 -0.347505 -0.264906   \n",
+       "5          1.246185 -0.304587  0.686094  0.494555  0.119255  0.479056   \n",
+       "\n",
+       "                  6         7         8         9  ...       191       192  \\\n",
+       "review_id                                          ...                       \n",
+       "1         -0.276581  1.018589 -0.325350  0.891336  ... -0.101687 -1.490672   \n",
+       "2          0.312534  0.950807  0.180838 -0.090150  ... -0.203311 -0.253282   \n",
+       "3          0.015662  0.404960  0.322822 -0.329311  ...  0.444391  0.381544   \n",
+       "4          0.271222  0.474403  0.497580 -0.513939  ...  0.268253  0.402992   \n",
+       "5         -0.830943 -0.361757 -0.601349 -0.323787  ...  1.504311 -0.081463   \n",
+       "\n",
+       "                193       194       195       196       197       198  \\\n",
+       "review_id                                                               \n",
+       "1         -1.554155  0.511061  0.771660 -0.470302 -1.465605 -0.134886   \n",
+       "2         -1.040361 -0.120287  0.982062 -0.333706 -0.805500 -0.244531   \n",
+       "3         -0.531157 -0.085994 -0.043369  0.106303 -0.335385  0.284948   \n",
+       "4         -0.298528 -0.173291  0.294568  0.165726 -0.057094 -0.112719   \n",
+       "5         -0.445861  0.061068 -0.438755  0.178500 -0.849374  1.170650   \n",
+       "\n",
+       "                199             file_name  \n",
+       "review_id                                  \n",
+       "1          0.668597    rev2_pine_valley_2  \n",
+       "2          0.274832  rev3_cypress_point_1  \n",
+       "3          0.109966  rev4_cypress_point_2  \n",
+       "4          0.223362     rev5_shinnecock_1  \n",
+       "5         -0.660383     rev6_shinnecock_2  \n",
+       "\n",
+       "[5 rows x 201 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#### PHASE 3: FEATURE EXTRACTION - COMPARING TF-IDF AND DOC2VEC ####\n",
-    "### Phase 3.5: Doc2Vec Feature Extraction - Train a Doc2Vec Model on the Preprocessed Text Data ###"
+    "#### PHASE 4: FEATURE EXTRACTION USING DOC2VEC ####\n",
+    "### Phase 4.2: Doc2Vec Feature Extraction - Train a Doc2Vec Model on the Preprocessed Text Data with the Best Parameters ###\n",
+    "## 4.2.1: Train a Doc2Vec Model with the Best Parameters ##\n",
+    "\n",
+    "# Ensure the necessary libraries are imported for this phase\n",
+    "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
+    "\n",
+    "# Define the best parameters for the Doc2Vec model\n",
+    "best_params = {\n",
+    "    'vector_size': 200,\n",
+    "    'window': 10,\n",
+    "    'min_count': 2,\n",
+    "    'epochs': 20\n",
+    "}\n",
+    "\n",
+    "# Create a list of TaggedDocument objects for the Doc2Vec model\n",
+    "tagged_data = [TaggedDocument(words=word_tokenize(review), tags=[str(i)]) for i, review in enumerate(golf_course_review['cleaned_review_text'])]\n",
+    "\n",
+    "# Train the Doc2Vec model on the tagged data with the best parameters\n",
+    "doc2vec_model = Doc2Vec(tagged_data, vector_size=best_params['vector_size'], window=best_params['window'], min_count=best_params['min_count'], workers=6, epochs=best_params['epochs'], seed=42)\n",
+    "\n",
+    "# Infer vectors for the tagged data\n",
+    "vectorized_data = [doc2vec_model.infer_vector(word_tokenize(review)) for review in golf_course_review['cleaned_review_text']]\n",
+    "\n",
+    "# Create a DataFrame with the Doc2Vec vectors\n",
+    "doc2vec_df = pd.DataFrame(vectorized_data, index=golf_course_review['review_id'])\n",
+    "\n",
+    "# Display the first few rows of the DataFrame with the Doc2Vec vectors\n",
+    "doc2vec_df.head()\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
